# cookbooks

./: .gitignore  DOCS_PLAN.md  README.md  VERIFICATION.md  footguns.txt  gepa_demo.py  notes.txt  plan.txt  pyproject.toml  research_agent_benchmark.txt  standards.md
code/demos/banking77/: banking77_gepa.toml  gepa_ai_banking77_adapter.py  run_banking77_demo.py  run_banking77_demo_prod.py
code/polyglot/: .gitignore  MIPRO_IMPLEMENTATION_ANALYSIS.md  README.md  plan.txt
code/polyglot/go/: README.md
code/polyglot/python/: README.md  app.py
code/polyglot/rust/: README.md  gepa_smoke_test.toml  run_smoke_test.sh
code/polyglot/tests/: README.md  run_smoke.sh
code/polyglot/typescript/: README.md  gepa_smoke_test.toml  run_smoke_test.ts
code/polyglot/zig/: README.md  issues.txt
code/training/graph_learning/: README.md
code/training/prompt_learning/: README.md  WALKTHROUGH_STATUS.md  cookbooks_gepa_plan.txt  task_app.py
code/training/rl/: README.md  task_app.py
code/training/sft/: README.md
demos/banking77/: README.md  banking77_gepa_demo.toml  banking77_gepa_demo_test.toml  banking77_task_app.py  run_banking77_demo.py
demos/banking77/in_process/: run.py
issues/: ISSUE_mipro_trace_registration.md  ISSUE_wasabi_s3_connectivity.md
products/adas/: README.md  banking77_dataset.json  image_style_matching_dataset.json  test_banking77.py  test_image_style_matching.py  test_style_matching.py
products/context_learning/: README.md  ctf_context_learning_alpha.toml  test_xbow_context_learning_alpha.py
recipes/: researchagent_gepa_mipro_synth_context.txt
(+40 files in other folders)
