[project]
name = "synth-cookbooks"
version = "0.1.0"
description = "Synth AI cookbooks and demos"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Synth AI SDK (includes task app framework, prompt learning, etc.)
    "synth-ai>=0.2.26",

    # Task app dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",

    # Dataset loading
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",

    # Utilities
    "click>=8.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demos", "code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
